# filesync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: citest
src/: lib.rs  local.rs  s3.rs  tests.rs
tests/: local_local_sync.rs  s3_test.rs
